tests/NormalTests/paczka1/fuzzy1/59955060.err
Error in line 2: A1xgeycr A250 98,8
Error in line 6: dZv A250 99,1
Error in line 17: jUY8Mad5I2i S31 72,45
Error in line 19: Zhs S636 37,1
Error in line 12: A1xgeycr S31 422,0
Error in line 23: A1xgeycr A250 53,2
Error in line 32: jUY8Mad5I2i S31 219,7
